@@ -80,6 +80,8 @@ Broker:
 - Add more efficient keepalive check.
 - Send DISCONNECT With session-takeover return code to MQTT v5 clients when a
   client connects with the same client id. Closes #2340.
+- Add support for sending the SIGRTMIN signal to trigger log rotation.
+  Closes #2337.
 
 Client library:
 - Add MOSQ_OPT_DISABLE_SOCKETPAIR to allow the disabling of the socketpair
